--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "crypto-dex-backend",
   "version": "1.0.0",
   "description": "REST backend system design for crypto-dex app",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "DevGoblins",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "express": "^4.17.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.4"
   },
   "scripts": {
     "start": "node src/index.js",
