--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.4"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "node": "node src/index.js",
+    "start": "nodemon src/index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
