--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongoosastic": "^4.6.0",
     "mongoose": "^6.1.4"
   },
   "scripts": {
-    "node": "node src/index.js",
-    "start": "nodemon src/index.js"
+    "node": "node src/app.js",
+    "start": "nodemon src/app.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
