--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoosastic": "^4.6.0",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "swagger-autogen": "^2.18.8",
+    "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
     "dev": "nodemon src/app.js",
