--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "chaintree-be",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "dist/app.js",
   "repository": "https://github.com/DavidRecheni/crypto-dex-backend.git",
   "author": "Deivid <david_recheni@hotmail.com>",
   "license": "MIT",
   "dependencies": {
     "@opensearch-project/opensearch": "^1.0.2",
-    "@types/body-parser": "^1.19.2",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -17,12 +16,14 @@
     "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
+    "dev": "tsc -w & nodemon .",
     "build": "tsc",
     "prestart": "yarn build",
-    "start": "node .",
+    "start": "tsc & node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/swagger-ui-express": "^4.1.3",
@@ -31,6 +32,7 @@
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
     "typescript": "4"
   }
