--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /node_modules
-
+dist/*
+/dist
 /build
 
 .DS_Store
@@ -12,3 +13,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+dist/utils/responseBuilder.js
+dist/utils/responseBuilder.js.map
+dist/utils/userUtils.js
+dist/utils/userUtils.js.map
