--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "swagger-autogen": "^2.18.8",
     "swagger-ui-express": "^4.3.0"
@@ -26,6 +27,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
