--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
+    "nodejs-base64": "^2.0.0",
     "swagger-autogen": "^2.18.8",
     "swagger-ui-express": "^4.3.0"
   },
