--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ethers": "^5.5.4",
     "express": "4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
