--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "scripts": {
     "dev": "tsc -w & nodemon .",
     "tsc": "./node_modules/typescript/bin/tsc",
-    "prebuild": "yarn install",
-    "build": "yarn run tsc",
+    "build": "yarn install & yarn run tsc",
     "prestart": "yarn build",
     "start": "tsc & node .",
     "test": "echo \"Error: no test specified\" && exit 1"
