--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tsc": "tsc",
     "build": "tsc",
     "prestart": "yarn build",
+    "postinstall": "npm run tsc",
     "start": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
