--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "canvas": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
